Fix contrast colors

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -6,10 +6,21 @@ header {
   padding: 150px 50px;
 }
 
+.name {
+  font-weight: bold;
+  color: #111;
+}
+
+.headText {
+  h1 {
+    color: #555;
+  }
+}
+
 .btnSendEmail {
   color: white;
   font-size: 1.25rem;
-  background-color:#6497b1;
+  background-color:#005580;
   width: 250px;
   height: 65px;
   border: none;
@@ -20,6 +31,7 @@ header {
 .btnSendEmail:hover {
   background-color: #b3cde0;
   transition: linear 300ms;
+  cursor: pointer;
 }
 
 .icon {
